changes were done

--- a/CompVision_Final.ipynb
+++ b/CompVision_Final.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "26b47742-eb78-43c6-a807-3b35744d4bae",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Итоговое задание по компьютерному зрению, ч. 2\n",
-    "# Колосов Максим"
+    "# Колосов Максим (написать можно в ТГ @MaksimKolosov87, +7 924 285 0705)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "5bb86cf7-c82a-40be-b7cf-d35906b250be",
    "metadata": {},
    "outputs": [
@@ -24,6 +24,7 @@
       "Requirement already satisfied: lap in /Applications/Anaconda/anaconda3/lib/python3.12/site-packages (0.5.12)\n",
       "Requirement already satisfied: ultralytics in /Applications/Anaconda/anaconda3/lib/python3.12/site-packages (8.3.148)\n",
       "Requirement already satisfied: opencv-python in /Applications/Anaconda/anaconda3/lib/python3.12/site-packages (4.11.0.86)\n",
+      "Requirement already satisfied: shapely in /Applications/Anaconda/anaconda3/lib/python3.12/site-packages (2.1.1)\n",
       "Requirement already satisfied: numpy>=1.21.6 in /Applications/Anaconda/anaconda3/lib/python3.12/site-packages (from lap) (1.26.4)\n",
       "Requirement already satisfied: matplotlib>=3.3.0 in /Applications/Anaconda/anaconda3/lib/python3.12/site-packages (from ultralytics) (3.8.4)\n",
       "Requirement already satisfied: pillow>=7.1.2 in /Applications/Anaconda/anaconda3/lib/python3.12/site-packages (from ultralytics) (10.3.0)\n",
@@ -65,12 +66,12 @@
    "source": [
     "# Установка библиотек\n",
     "\n",
-    "!pip install lap ultralytics opencv-python"
+    "!pip install lap ultralytics opencv-python shapely"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "42fc5f02-95e2-4e17-a7e2-f59400d7e68d",
    "metadata": {},
    "outputs": [],
@@ -81,12 +82,13 @@
     "import cv2\n",
     "import time\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "from shapely.geometry import Point, Polygon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "bbb8a741-445d-4961-acef-d89f3865f353",
    "metadata": {},
    "outputs": [
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "id": "2d1dd33a-40ec-43a2-9e2f-99f2804687ce",
    "metadata": {},
    "outputs": [],
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "id": "c140b642-3de0-4800-84a3-e5b7b51660eb",
    "metadata": {},
    "outputs": [],
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "id": "f3055857-c93b-41fa-ae52-2da02297fb95",
    "metadata": {},
    "outputs": [],
@@ -193,6 +195,9 @@
     "WHITE_COLOR = (255, 255, 255)  # Белый\n",
     "RED_COLOR = (0, 0, 255)  # Красный\n",
     "\n",
+    "# Направление, в котором будем учитывать пересечение машинами линии\n",
+    "DIRECTION = \"left_to_right\"  # Возможные значения: \"left_to_right\", \"right_to_left\"\n",
+    "\n",
     "# Задаём отрезок для подсчёта пересечений\n",
     "line_start = (778, 512)  # Начальная точка отрезка\n",
     "line_end = (893, 403)    # Конечная точка отрезка\n",
@@ -208,56 +213,32 @@
     "\n",
     "# Функция для проверки нахождения точки внутри четырёхугольника\n",
     "def point_in_polygon(point, poly):\n",
-    "    x, y = point\n",
-    "    n = len(poly)\n",
-    "    inside = False\n",
-    "    \n",
-    "    p1x, p1y = poly[0]\n",
-    "    for i in range(n + 1):\n",
-    "        p2x, p2y = poly[i % n]\n",
-    "        if y > min(p1y, p2y):\n",
-    "            if y <= max(p1y, p2y):\n",
-    "                if x <= max(p1x, p2x):\n",
-    "                    if p1y != p2y:\n",
-    "                        xinters = (y - p1y) * (p2x - p1x) / (p2y - p1y) + p1x\n",
-    "                    if p1x == p2x or x <= xinters:\n",
-    "                        inside = not inside\n",
-    "        p1x, p1y = p2x, p2y\n",
-    "    \n",
-    "    return inside\n",
+    "    # Создаём объект точки\n",
+    "    pt = Point(point)\n",
+    "    # Создаём объект многоугольника\n",
+    "    poly_obj = Polygon(poly)\n",
+    "    # Проверяем, находится ли точка внутри многоугольника\n",
+    "    return poly_obj.contains(pt) or poly_obj.touches(pt)\n",
     "\n",
     "# Функции для проверки пересечения\n",
-    "def on_segment(A, B, P):\n",
-    "    # Проверяем, лежит ли точка P на отрезке AB\n",
-    "    return min(A[0], B[0]) <= P[0] <= max(A[0], B[0]) and (min(A[1], B[1]) <= P[1] <= max(A[1], B[1]))\n",
+    "def point_side(point):\n",
+    "    A = line_start\n",
+    "    B = line_end\n",
+    "    P = point\n",
+    "    return (B[1] - A[1]) * (P[0] - A[0]) - (B[0] - A[0]) * (P[1] - A[1])\n",
     "\n",
-    "def segments_intersect(A, B, C, D):\n",
-    "    # Проверяем пересечение отрезков AB и CD\n",
-    "    def orientation(O, P, Q):\n",
-    "        # Вычисляем ориентацию тройки точек (O, P, Q)\n",
-    "        val = (P[1] - O[1]) * (Q[0] - P[0]) - (P[0] - O[0]) * (Q[1] - P[1])\n",
-    "        if val == 0: return 0  # Коллинеарны\n",
-    "        return 1 if val > 0 else -1  # По или против часовой стрелки\n",
-    "\n",
-    "    o1 = orientation(A, B, C)\n",
-    "    o2 = orientation(A, B, D)\n",
-    "    o3 = orientation(C, D, A)\n",
-    "    o4 = orientation(C, D, B)\n",
-    "\n",
-    "    # Общее условие пересечения\n",
-    "    if o1 != o2 and o3 != o4:\n",
+    "def is_crossing_line(prev_pos, cur_pos):\n",
+    "    sign_prev = point_side(prev_pos)\n",
+    "    sign_cur = point_side(cur_pos)\n",
+    "    if DIRECTION == \"left_to_right\" and sign_prev > 0 and sign_cur < 0:\n",
     "        return True\n",
-    "\n",
-    "    # Проверка случаев, когда точки лежат на отрезках\n",
-    "    if o1 == 0 and on_segment(A, B, C): return True\n",
-    "    if o2 == 0 and on_segment(A, B, D): return True\n",
-    "    if o3 == 0 and on_segment(C, D, A): return True\n",
-    "    if o4 == 0 and on_segment(C, D, B): return True\n",
-    "\n",
-    "    return False\n",
+    "    elif DIRECTION == \"right_to_left\" and sign_prev < 0 and sign_cur > 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "# Счётчик пересечений, история треков и множество пересекших объектов\n",
-    "cross_count = 0\n",
+    "cross_count = 0  # Подсчёт количества пересечений\n",
     "prev_centers = {}  # Для хранения предыдущих позиций (cx, cy) по ID\n",
     "crossed_ids = set()  # Множество для хранения ID пересекших объектов\n",
     "in_red_zone = {}  # Для отслеживания машин в красной зоне\n",
@@ -343,30 +324,11 @@
     "                    prev_cx, prev_cy = prev_centers[track_id]\n",
     "                    \n",
     "                    # Проверяем пересечение траектории с отрезком\n",
-    "                    if segments_intersect(line_start, line_end, \n",
-    "                                         (prev_cx, prev_cy), \n",
-    "                                         (cx, cy)):\n",
-    "                        \n",
-    "                        # Вычисляем векторное произведение для определения стороны\n",
-    "                        Ax, Ay = line_start\n",
-    "                        Bx, By = line_end\n",
-    "                        # Вектор AB\n",
-    "                        AB = (Bx - Ax, By - Ay)\n",
-    "                        # Вектор от A до предыдущей точки\n",
-    "                        AP_prev = (prev_cx - Ax, prev_cy - Ay)\n",
-    "                        # Вектор от A до текущей точки\n",
-    "                        AP_curr = (cx - Ax, cy - Ay)\n",
-    "                        \n",
-    "                        # Векторное произведение AB x AP\n",
-    "                        cross_prev = AB[0] * AP_prev[1] - AB[1] * AP_prev[0]\n",
-    "                        cross_curr = AB[0] * AP_curr[1] - AB[1] * AP_curr[0]\n",
-    "                        \n",
-    "                        # Переход из отрицательной в положительную область\n",
-    "                        if cross_prev < 0 and cross_curr >= 0:\n",
+    "                    if is_crossing_line((prev_cx, prev_cy), (cx, cy)):\n",
+    "                        # Добавляем ID в множество пересекших объектов\n",
+    "                        if track_id not in crossed_ids:\n",
     "                            cross_count += 1\n",
-    "                            # Добавляем ID в множество пересекших объектов\n",
-    "                            if track_id not in crossed_ids:\n",
-    "                                crossed_ids.add(track_id)\n",
+    "                            crossed_ids.add(track_id)\n",
     "                \n",
     "                # Обновляем историю позиций\n",
     "                prev_centers[track_id] = (cx, cy)\n",
@@ -385,8 +347,8 @@
     "                    box_color = BLUE_COLOR\n",
     "                    text_bg_color = BLUE_COLOR\n",
     "                else:\n",
-    "                    box_color = BOX_COLOR\n",
-    "                    text_bg_color = BOX_COLOR\n",
+    "                    box_color = GREEN_COLOR\n",
+    "                    text_bg_color = GREEN_COLOR\n",
     "                \n",
     "                # Рисуем bounding box\n",
     "                cv2.rectangle(\n",
@@ -398,8 +360,8 @@
     "                    lineType=cv2.LINE_AA\n",
     "                )\n",
     "                \n",
-    "                # Форматируем текст: ID, координаты центра\n",
-    "                text = f\"ID:{track_id} ({cx},{cy})\"\n",
+    "                # Форматируем текст: ID машины\n",
+    "                text = f\"ID:{track_id}\"\n",
     "                \n",
     "                # Рассчитываем размер текста\n",
     "                text_size, baseline = cv2.getTextSize(text, cv2.FONT_HERSHEY_SIMPLEX, 0.7, 2)\n",
